# docshub

./: .gitignore  README.md  docs_config.yaml  local-test.md  pyproject.toml
.github/instructions/: python.instructions.md
src/docshub/: docs_config.yaml  server.py
src/docshub/tests/: test_server.py
